add service options + VIE/EN

--- a/industries.html
+++ b/industries.html
@@ -383,30 +383,30 @@
                         </div>
 
                         <div class="service-types">
-                            <h3 data-translate="industries.furniture.options.title">Service Options</h3>
+                            <h3 data-translate="industries.furnitureHouseware.options.title">Service Options</h3>
                             <div class="types-grid">
                                 <div class="type-card">
                                     <div class="type-header">
                                         <i class="fas fa-couch"></i>
-                                        <h4 data-translate="industries.furniture.options.residential.title">Residential Services</h4>
+                                        <h4 data-translate="industries.furnitureHouseware.options.residential.title">Residential Services</h4>
                                     </div>
                                     <ul class="type-features">
-                                        <li data-translate="industries.furniture.options.residential.features.0">Home delivery</li>
-                                        <li data-translate="industries.furniture.options.residential.features.1">Assembly service</li>
-                                        <li data-translate="industries.furniture.options.residential.features.2">White glove delivery</li>
-                                        <li data-translate="industries.furniture.options.residential.features.3">Installation</li>
+                                        <li data-translate="industries.furnitureHouseware.options.residential.features.0">Home delivery</li>
+                                        <li data-translate="industries.furnitureHouseware.options.residential.features.1">Assembly service</li>
+                                        <li data-translate="industries.furnitureHouseware.options.residential.features.2">White glove delivery</li>
+                                        <li data-translate="industries.furnitureHouseware.options.residential.features.3">Installation</li>
                                     </ul>
                                 </div>
                                 <div class="type-card">
                                     <div class="type-header">
                                         <i class="fas fa-building"></i>
-                                        <h4 data-translate="industries.furniture.options.commercial.title">Commercial Services</h4>
+                                        <h4 data-translate="industries.furnitureHouseware.options.commercial.title">Commercial Services</h4>
                                     </div>
                                     <ul class="type-features">
-                                        <li data-translate="industries.furniture.options.commercial.features.0">Project management</li>
-                                        <li data-translate="industries.furniture.options.commercial.features.1">Bulk delivery</li>
-                                        <li data-translate="industries.furniture.options.commercial.features.2">Storage solutions</li>
-                                        <li data-translate="industries.furniture.options.commercial.features.3">Office setup</li>
+                                        <li data-translate="industries.furnitureHouseware.options.commercial.features.0">Project management</li>
+                                        <li data-translate="industries.furnitureHouseware.options.commercial.features.1">Bulk delivery</li>
+                                        <li data-translate="industries.furnitureHouseware.options.commercial.features.2">Storage solutions</li>
+                                        <li data-translate="industries.furnitureHouseware.options.commercial.features.3">Office setup</li>
                                     </ul>
                                 </div>
                             </div>
@@ -465,30 +465,30 @@
                         </div>
 
                         <div class="service-types">
-                            <h3 data-translate="industries.construction.options.title">Service Options</h3>
+                            <h3 data-translate="industries.metalConstruction.options.title">Service Options</h3>
                             <div class="types-grid">
                                 <div class="type-card">
                                     <div class="type-header">
                                         <i class="fas fa-hard-hat"></i>
-                                        <h4 data-translate="industries.construction.options.project.title">Project Logistics</h4>
+                                        <h4 data-translate="industries.metalConstruction.options.project.title">Project Logistics</h4>
                                     </div>
                                     <ul class="type-features">
-                                        <li data-translate="industries.construction.options.project.features.0">Site delivery planning</li>
-                                        <li data-translate="industries.construction.options.project.features.1">Heavy equipment transport</li>
-                                        <li data-translate="industries.construction.options.project.features.2">Material staging</li>
-                                        <li data-translate="industries.construction.options.project.features.3">Just-in-time delivery</li>
+                                        <li data-translate="industries.metalConstruction.options.project.features.0">Site delivery planning</li>
+                                        <li data-translate="industries.metalConstruction.options.project.features.1">Heavy equipment transport</li>
+                                        <li data-translate="industries.metalConstruction.options.project.features.2">Material staging</li>
+                                        <li data-translate="industries.metalConstruction.options.project.features.3">Just-in-time delivery</li>
                                     </ul>
                                 </div>
                                 <div class="type-card">
                                     <div class="type-header">
                                         <i class="fas fa-warehouse"></i>
-                                        <h4 data-translate="industries.construction.options.storage.title">Storage Solutions</h4>
+                                        <h4 data-translate="industries.metalConstruction.options.storage.title">Storage Solutions</h4>
                                     </div>
                                     <ul class="type-features">
-                                        <li data-translate="industries.construction.options.storage.features.0">Secure warehousing</li>
-                                        <li data-translate="industries.construction.options.storage.features.1">Inventory management</li>
-                                        <li data-translate="industries.construction.options.storage.features.2">Material handling</li>
-                                        <li data-translate="industries.construction.options.storage.features.3">Distribution services</li>
+                                        <li data-translate="industries.metalConstruction.options.storage.features.0">Secure warehousing</li>
+                                        <li data-translate="industries.metalConstruction.options.storage.features.1">Inventory management</li>
+                                        <li data-translate="industries.metalConstruction.options.storage.features.2">Material handling</li>
+                                        <li data-translate="industries.metalConstruction.options.storage.features.3">Distribution services</li>
                                     </ul>
                                 </div>
                             </div>
@@ -621,7 +621,7 @@
                                     <p data-translate="industries.healthcare.features.cleanroom.description">Sterile environment</p>
                                 </div>
                                 <div class="feature-card">
-                                    <i class="fas fa-truck-medical"></i>
+                                    <i class="fas fa-ambulance"></i>
                                     <h4 data-translate="industries.healthcare.features.transport.title">Medical Transport</h4>
                                     <p data-translate="industries.healthcare.features.transport.description">Specialized vehicles</p>
                                 </div>
@@ -727,7 +727,7 @@
                                 </div>
                                 <div class="type-card">
                                     <div class="type-header">
-                                        <i class="fas fa-warehouse-alt"></i>
+                                        <i class="fas fa-warehouse"></i>
                                         <h4 data-translate="industries.dangerous.options.storage.title">Storage Services</h4>
                                     </div>
                                     <ul class="type-features">
