update right sidebar + ENG/VIE

--- a/industries.html
+++ b/industries.html
@@ -912,47 +912,36 @@
             </div>
         </main>
 
-        <!-- Right Sidebar -->
-        <aside class="transport-sidebar-right">
-            <div class="transport-quick-quote">
-                <h3 data-translate="industries.quote.title">Request Industry Solution</h3>
-                <form class="transport-quote-form">
-                    <div class="form-group">
-                        <label data-translate="industries.quote.industryType">Industry Type</label>
-                        <select>
-                            <option value="" data-translate="industries.quote.selectIndustry">Select industry</option>
-                            <option value="food" data-translate="industries.quote.industries.food">Food & Beverage</option>
-                            <option value="garment" data-translate="industries.quote.industries.garment">Garment & Footwear</option>
-                            <option value="furniture" data-translate="industries.quote.industries.furniture">Furniture & Houseware</option>
-                            <option value="construction" data-translate="industries.quote.industries.construction">Construction Materials</option>
-                            <option value="machinery" data-translate="industries.quote.industries.machinery">Machinery & Equipment</option>
-                            <option value="healthcare" data-translate="industries.quote.industries.healthcare">Healthcare & Cosmetics</option>
-                            <option value="dangerous" data-translate="industries.quote.industries.dangerous">Dangerous Goods</option>
-                            <option value="automotive" data-translate="industries.quote.industries.automotive">Automotive</option>
-                            <option value="electronics" data-translate="industries.quote.industries.electronics">Electronics</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label data-translate="industries.quote.serviceRequired">Service Required</label>
-                        <select>
-                            <option value="" data-translate="industries.quote.selectService">Select service</option>
-                            <option value="transport" data-translate="industries.quote.services.transport">Transportation</option>
-                            <option value="warehouse" data-translate="industries.quote.services.warehouse">Warehousing</option>
-                            <option value="customs" data-translate="industries.quote.services.customs">Customs Clearance</option>
-                            <option value="distribution" data-translate="industries.quote.services.distribution">Distribution</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label data-translate="industries.quote.specialRequirements">Special Requirements</label>
-                        <textarea data-translate-placeholder="industries.quote.requirementsPlaceholder" placeholder="Enter any special requirements"></textarea>
-                    </div>
-                    <button type="submit" class="transport-quote-btn">
-                        <i class="fas fa-paper-plane"></i>
-                        <span data-translate="industries.quote.submit">Get Solution</span>
-                    </button>
-                </form>
+       <!-- Right Sidebar -->
+       <aside class="transport-sidebar-right">
+        <div class="contact-card">
+            <div class="contact-header">
+                <i class="fas fa-headset"></i>
+                <h3 data-translate="industries.contact.title">Need Assistance?</h3>
             </div>
-        </aside>
+            <div class="contact-content">
+                <p class="contact-description" data-translate="industries.contact.description">Our logistics experts are here to help you find the best solution for your needs.</p>
+                
+                <div class="contact-methods">
+                    <div class="contact-method">
+                        <i class="fas fa-phone-alt"></i>
+                        <div class="method-details">
+                            <span class="label" data-translate="industries.contact.phone.label">Hotline 24/7</span>
+                            <span class="value" data-translate="industries.contact.phone.value">+84 899-498-589</span>
+                        </div>
+                    </div>
+                    
+                    <div class="contact-method">
+                        <i class="fas fa-envelope"></i>
+                        <div class="method-details">
+                            <span class="label" data-translate="industries.contact.email.label">Email Us</span>
+                            <span class="value" data-translate="industries.contact.email.value">support@logitrack.com</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </aside>
     </div>
 
      <!-- Footer -->
