--- a/logistics-supply-chain.html
+++ b/logistics-supply-chain.html
@@ -466,36 +466,36 @@
             </div>
         </main>
 
-        <!-- Right Sidebar -->
-        <aside class="transport-sidebar-right">
-            <div class="transport-quick-quote">
-                <h3 data-translate="logistics.services.quote.title">Request a Quote</h3>
-                <form class="transport-quote-form">
-                    <div class="form-group">
-                        <label data-translate="logistics.services.quote.serviceType">Service Type</label>
-                        <select>
-                            <option value="" data-translate="logistics.services.quote.selectService">Select a service</option>
-                            <option value="customs" data-translate="logistics.services.quote.customsBrokerage">Customs Brokerage</option>
-                            <option value="insurance" data-translate="logistics.services.quote.cargoInsurance">Cargo Insurance</option>
-                            <option value="warehouse" data-translate="logistics.services.quote.warehousing">Warehousing</option>
-                            <option value="ecommerce" data-translate="logistics.services.quote.ecommerce">E-Commerce Services</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label data-translate="logistics.services.quote.location">Service Location</label>
-                        <input type="text" placeholder="Enter location" data-translate-placeholder="logistics.services.quote.locationPlaceholder">
-                    </div>
-                    <div class="form-group">
-                        <label data-translate="logistics.services.quote.cargoType">Cargo Type</label>
-                        <input type="text" placeholder="Enter cargo type" data-translate-placeholder="logistics.services.quote.cargoPlaceholder">
-                    </div>
-                    <button type="submit" class="transport-quote-btn">
-                        <i class="fas fa-paper-plane"></i>
-                        <span data-translate="logistics.services.quote.submit">Get Free Quote</span>
-                    </button>
-                </form>
+       <!-- Right Sidebar -->
+       <aside class="transport-sidebar-right">
+        <div class="contact-card">
+            <div class="contact-header">
+                <i class="fas fa-headset"></i>
+                <h3 data-translate="logistics.services.contact.title">Need Assistance?</h3>
             </div>
-        </aside>
+            <div class="contact-content">
+                <p class="contact-description" data-translate="logistics.services.contact.description">Our logistics experts are here to help you find the best solution for your needs.</p>
+                
+                <div class="contact-methods">
+                    <div class="contact-method">
+                        <i class="fas fa-phone-alt"></i>
+                        <div class="method-details">
+                            <span class="label" data-translate="logistics.services.contact.phone.label">Hotline 24/7</span>
+                            <span class="value" data-translate="logistics.services.contact.phone.value">+84 899-498-589</span>
+                        </div>
+                    </div>
+                    
+                    <div class="contact-method">
+                        <i class="fas fa-envelope"></i>
+                        <div class="method-details">
+                            <span class="label" data-translate="logistics.services.contact.email.label">Email Us</span>
+                            <span class="value" data-translate="logistics.services.contact.email.value">support@logitrack.com</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </aside>
     </div>
 
     <!-- Footer -->
