--- a/logistics-supply-chain.html
+++ b/logistics-supply-chain.html
@@ -77,7 +77,7 @@
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#sustainability">Sustainability</a></li>
                         <li><a href="#news">Insights</a></li>
-                        <li><a href="#support">Support</a></li>
+                        <li><a href="support.html" data-translate="support">Support</a></li>
                     </ul>
                     <div class="lang-selector">
                         <a href="#">VIE</a>
@@ -478,7 +478,7 @@
                 
                 <div class="contact-methods">
                     <div class="contact-method">
-                        <i class="fas fa-phone-alt"></i>
+                        <i class="fas fa-phonealt"></i>
                         <div class="method-details">
                             <span class="label" data-translate="logistics.services.contact.phone.label">Hotline 24/7</span>
                             <span class="value" data-translate="logistics.services.contact.phone.value">+84 899-498-589</span>
