--- a/transportation.html
+++ b/transportation.html
@@ -74,7 +74,7 @@
                         <li><a href="index.html#about" data-translate="aboutUs">About Us</a></li>
                         <li><a href="index.html#sustainability" data-translate="sustainability">Sustainability</a></li>
                         <li><a href="index.html#news" data-translate="news">Insights</a></li>
-                        <li><a href="index.html#support" data-translate="support">Support</a></li>
+                        <li><a href="support.html" data-translate="support">Support</a></li>
                     </ul>
                     <div class="lang-selector">
                         <a href="#" data-lang="vi">VIE</a>
