--- a/privacy.html
+++ b/privacy.html
@@ -75,7 +75,7 @@
                         <li><a href="#about">About Us</a></li>
                         <li><a href="#sustainability">Sustainability</a></li>
                         <li><a href="#news">Insights</a></li>
-                        <li><a href="#support">Support</a></li>
+                        <li><a href="support.html" data-translate="support">Support</a></li>
                     </ul>
                     <div class="lang-selector">
                         <a href="#">VIE</a>
