--- a/support.html
+++ b/support.html
@@ -150,19 +150,21 @@
                     </div>
                 </div>
 
-                <div class="sp-category-card" data-category="technical" data-aos="fade-up" data-aos-delay="400">
-                    <div class="sp-card-content">
-                        <div class="sp-card-icon">
-                            <i class="fas fa-laptop-code"></i>
+                <div class="sp-technical-support">
+                    <div class="sp-category-card" data-category="technical" data-aos="fade-up" data-aos-delay="400">
+                        <div class="sp-card-content">
+                            <div class="sp-card-icon">
+                                <i class="fas fa-laptop-code"></i>
+                            </div>
+                            <h3 data-translate="support.categories.technical.title">Technical Support</h3>
+                            <p data-translate="support.categories.technical.description">Get help with technical issues</p>
                         </div>
-                        <h3 data-translate="support.categories.technical.title">Technical Support</h3>
-                        <p data-translate="support.categories.technical.description">Get help with technical issues</p>
-                    </div>
-                    <div class="sp-card-footer">
-                        <a href="#" class="sp-learn-more-btn" data-translate="support.categories.learnMore">
-                            <span>Learn More</span>
-                            <i class="fas fa-arrow-right"></i>
-                        </a>
+                        <div class="sp-card-footer">
+                            <a href="#" class="sp-learn-more-btn" data-translate="support.categories.learnMore">
+                                <span>Learn More</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -218,22 +220,9 @@
 
                         <div class="sp-guide-card-back">
                             <div class="sp-card-content">
-                                <h3 data-translate="support.quickHelp.tracking.howTo">How to Track</h3>
-                                <div class="sp-detailed-steps">
-                                    <div class="sp-step">
-                                        <h4 data-translate="support.quickHelp.tracking.step1Title">Enter Tracking Number</h4>
-                                        <p data-translate="support.quickHelp.tracking.step1Description">Find your tracking number in the shipping confirmation email</p>
-                                    </div>
-                                    <div class="sp-step">
-                                        <h4 data-translate="support.quickHelp.tracking.step2Title">Select Service</h4>
-                                        <p data-translate="support.quickHelp.tracking.step2Description">Choose your carrier from the available options</p>
-                                    </div>
-                                    <div class="sp-step">
-                                        <h4 data-translate="support.quickHelp.tracking.step3Title">Track Status</h4>
-                                        <p data-translate="support.quickHelp.tracking.step3Description">Get real-time updates on your shipment location</p>
-                                    </div>
-                                </div>
-                                <button class="sp-flip-back" data-translate="support.quickHelp.back">Back</button>
+                                <a href="index.html" class="logo">
+                                    Logi<span>Track</span>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -268,22 +257,9 @@
 
                         <div class="sp-guide-card-back">
                             <div class="sp-card-content">
-                                <h3 data-translate="support.quickHelp.shipping.howTo">How to Ship</h3>
-                                <div class="sp-detailed-steps">
-                                    <div class="sp-step">
-                                        <h4 data-translate="support.quickHelp.shipping.step1Title">Package Details</h4>
-                                        <p data-translate="support.quickHelp.shipping.step1Description">Enter dimensions, weight, and contents of your package</p>
-                                    </div>
-                                    <div class="sp-step">
-                                        <h4 data-translate="support.quickHelp.shipping.step2Title">Shipping Options</h4>
-                                        <p data-translate="support.quickHelp.shipping.step2Description">Select delivery speed, insurance, and special handling</p>
-                                    </div>
-                                    <div class="sp-step">
-                                        <h4 data-translate="support.quickHelp.shipping.step3Title">Compare Rates</h4>
-                                        <p data-translate="support.quickHelp.shipping.step3Description">Review available shipping rates and select the best option</p>
-                                    </div>
-                                </div>
-                                <button class="sp-flip-back" data-translate="support.quickHelp.back">Back</button>
+                                <a href="index.html" class="logo">
+                                    Logi<span>Track</span>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -318,22 +294,9 @@
 
                         <div class="sp-guide-card-back">
                             <div class="sp-card-content">
-                                <h3 data-translate="support.quickHelp.claims.howTo">How to File a Claim</h3>
-                                <div class="sp-detailed-steps">
-                                    <div class="sp-step">
-                                        <h4 data-translate="support.quickHelp.claims.step1Title">Gather Documents</h4>
-                                        <p data-translate="support.quickHelp.claims.step1Description">Collect shipping receipt, photos, and other relevant documentation</p>
-                                    </div>
-                                    <div class="sp-step">
-                                        <h4 data-translate="support.quickHelp.claims.step2Title">Submit Form</h4>
-                                        <p data-translate="support.quickHelp.claims.step2Description">Complete the claim form with all required information</p>
-                                    </div>
-                                    <div class="sp-step">
-                                        <h4 data-translate="support.quickHelp.claims.step3Title">Track Status</h4>
-                                        <p data-translate="support.quickHelp.claims.step3Description">Monitor your claim status and respond to any requests</p>
-                                    </div>
-                                </div>
-                                <button class="sp-flip-back" data-translate="support.quickHelp.back">Back</button>
+                                <a href="index.html" class="logo">
+                                    Logi<span>Track</span>
+                                </a>
                             </div>
                         </div>
                     </div>
